...
                    </view>
                    <tabBarItem key="tabBarItem" title="Item" id="SIN-DA-t45"/>
                    <navigationItem key="navigationItem" title="Projects" id="LcB-hA-Y4X">
                        <barButtonItem key="rightBarButtonItem" title="Logout" id="WnD-6s-big">
                            <connections>
                                <action selector="logoutButtonAction:" destination="BYZ-38-t0r" id="Jxp-Zo-wFe"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Issues" id="9Tr-CG-aqX">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="E98-ia-N1f">
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                        </constraints>
                                                    </imageView>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hbB-Tz-7V8">
                                                        <rect key="frame" x="36" y="0.0" width="194" height="40"/>
                                                        <nil key="textColor"/>
...
                                                        </constraints>
                                                    </imageView>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cYb-nn-SJV">
                                                        <rect key="frame" x="36" y="0.0" width="194.5" height="40"/>
                                                        <nil key="textColor"/>
...
                                                    <constraint firstAttribute="height" constant="50" id="Lrz-GH-kBd"/>
                                                </constraints>
                                                <state key="normal" title="Login">
                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
...
                                                <state key="normal">
                                                    <attributedString key="attributedTitle">
                                                        <fragment content="Login for first time">
                                                            <attributes>
                                                                <color key="NSColor" red="1" green="0.87673938269999996" blue="0.13765683770000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                                <state key="normal">
                                                    <attributedString key="attributedTitle">
                                                        <fragment content="Already have an account">
                                                            <attributes>
                                                                <color key="NSColor" red="1" green="0.87673938269999996" blue="0.13765683770000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Done" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vxA-95-uVe">
                                        <rect key="frame" x="60.5" y="16" width="34" height="17"/>
                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Select issue type" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="s5g-9X-Hgx">
                                                <rect key="frame" x="37.5" y="40" width="300" height="30"/>
                                                <constraints>
...
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                                <state key="normal" title="Report Issue">
                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
...
