...
                <rect key="frame" x="0.0" y="0.0" width="344" height="124.5"/>
                <autoresizingMask key="autoresizingMask"/>
                <subviews>
                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ER1-qz-hbC">
                        <rect key="frame" x="8.5" y="20" width="327" height="85"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="change response delay" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cxg-9n-Kcz">
                                <rect key="frame" x="8" y="16" width="220" height="19.5"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="220" id="YKS-WE-XBo"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
